santoso-protocol/k8s/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gunawan
  labels:
    app.kubernetes.io/part-of: gunawan-santoso-corp
